--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,23 +3,25 @@
 	<head>
 	    <title>Página principal</title>
 	    <meta charset="UTF-8">
+		<link rel="stylesheet" href="/css/styles.css">
 		<!-- Bootstrap CDN -->
 	  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
-	    <h1 class="m-3">Página Home</h1>
-	
-		<!-- Si el usuario está autenticado, muestra su nombre y botón de logout -->
-	    <div class="m-3" sec:authorize="isAuthenticated()">
-			<p>Bienvenido, <span th:text="${username}"></span>!</p>
-			
-			<!-- Si el usuario es admin le da acceso al panel de admin -->
-			<div sec:authorize="hasRole('ADMIN')">
-				<form class="d-flex justify-content-start" th:action="@{/user-list}" method="GET">
-				    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-				    <div th:replace="~{fragments/mainButton :: boton('Panel de administrador', 'btn-primary', '')}"></div>
-				</form>
-			</div>
+		<div class="position-relative" style="height: 40vh; background-image: url('/img/background.png'); background-size: cover; background-position: center;">
+		    <!-- Capa oscura encima de la imagen -->
+		    <div class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(0, 0, 0, 0.4);"></div>
+
+		    <!-- Texto centrado encima de la imagen -->
+		    <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
+		        <h2 class="fw-bold display-5">¡Eventos Distribuidos!</h2>
+		    </div>
+		</div>
+
+		
+	    <div>
+			<!-- Nav Menu -->
+		    <div th:replace="~{fragments/navMenu :: navMenu}"></div>
 			
 			<!-- Cierre de la sesión actual -->
 			<form style="margin-top: 10px;" class="d-flex justify-content-start" th:action="@{/logout}" method="POST">
@@ -28,15 +30,26 @@
 			</form>
 	    </div>
 		
-	    <!-- Si NO está autenticado, muestra el botón de login -->
-	    <div class="m-3" sec:authorize="!isAuthenticated()">
-	        <div th:replace="~{fragments/linkButton :: boton('Iniciar sesión', '/login', '', 'background-color: #1E88E5;')}"></div>
-	    </div>
-		
-		<!-- Panel de excepciones -->
-	    <div class="m-3">
-	        <div th:replace="~{fragments/linkButton :: boton('Panel de excepciones', '/exception-menu', '', 'background-color: #4CAF50;')}"></div>
-	    </div>
+		<div class="m-3">
+			<p th:if="${#lists.isEmpty(eventList)}">No hay eventos disponibles actualmente.</p>
+			
+			<div class="m-3">				
+				<div class="row row-cols-1 row-cols-md-3 g-4">
+				    <div th:each="event : ${eventList}">
+						<div class="card">
+							<img th:src="@{'/img/event/' + ${event.imagen}}" class="card-img-top" alt="Imagen del evento">
+				            <div class="card-body">
+				                <h5 class="card-title" th:text="${event.titulo}">Event Title</h5>
+				                <p class="card-text" th:text="${event.descripcion}">Event Description</p>
+				                <p class="card-text">
+				                    <small class="text-muted" th:text="${event.fechaInicio}">Date</small>
+				                </p>
+				            </div>
+				        </div>
+					</div>
+				</div>
+			</div>
+		</div>
 		
 		<!-- Footer -->
 	    <div th:replace="~{fragments/footer :: footer}"></div>
