Gestión de imagenes y categorias de eventos
Se completa la creación de eventos, lo que implica la gestión de imagenes e imagen por defecto para los que no disponen de una.

Gestión de categorias de eventos para filtros futuros, un mismo evento puede tener varias categorias a la vez.

Se añade un primera implementación de ubicaciones con OpenStreetMap como alternativa a Google Maps

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -18,3 +18,19 @@
 .navbar-nav .nav-item .nav-link:hover {
     background-color: var(--accent-color);  /* Usamos el color de acento definido */
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  display: block;
+}
