--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	<head>
 	    <title>Página principal</title>
 	    <meta charset="UTF-8">
@@ -8,48 +8,52 @@
 	  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="position-relative" style="height: 40vh; background-image: url('/img/background.png'); background-size: cover; background-position: center;">
-		    <!-- Capa oscura encima de la imagen -->
-		    <div class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(0, 0, 0, 0.4);"></div>
-
-		    <!-- Texto centrado encima de la imagen -->
-		    <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
-		        <h2 class="fw-bold display-5">¡Eventos Distribuidos!</h2>
+		<main>
+			<!-- Cabecera -->
+		    <div class="position-relative" style="height: 35vh; background-image: url('/img/background.png'); background-size: cover; background-position: center;">
+		        <div class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(0, 0, 0, 0.4);"></div>
+		        <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
+		            <h2 class="fw-bold display-5">¡Eventos Distribuidos!</h2>
+		        </div>
 		    </div>
-		</div>
-
-		
-	    <div>
-			<!-- Nav Menu -->
-		    <div th:replace="~{fragments/navMenu :: navMenu}"></div>
-			
-			<!-- Cierre de la sesión actual -->
-			<form style="margin-top: 10px;" class="d-flex justify-content-start" th:action="@{/logout}" method="POST">
-			    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-			    <div th:replace="~{fragments/mainButton :: boton('Cerrar sesión', 'btn-primary', 'background-color: #EC407A;')}"></div>
-			</form>
-	    </div>
-		
-		<div class="m-3">
-			<p th:if="${#lists.isEmpty(eventList)}">No hay eventos disponibles actualmente.</p>
-			
-			<div class="m-3">				
-				<div class="row row-cols-1 row-cols-md-3 g-4">
-				    <div th:each="event : ${eventList}">
-						<div class="card">
-							<img th:src="@{'/img/event/' + ${event.imagen}}" class="card-img-top" alt="Imagen del evento">
-				            <div class="card-body">
-				                <h5 class="card-title" th:text="${event.titulo}">Event Title</h5>
-				                <p class="card-text" th:text="${event.descripcion}">Event Description</p>
-				                <p class="card-text">
-				                    <small class="text-muted" th:text="${event.fechaInicio}">Date</small>
-				                </p>
-				            </div>
-				        </div>
-					</div>
-				</div>
-			</div>
-		</div>
+					
+	        <div>
+	            <!-- Nav Menu -->
+	            <div th:replace="~{fragments/navMenu :: navMenu}"></div>
+	
+	            <!-- Logout -->
+	            <form style="margin-top: 10px;" class="d-flex justify-content-start" th:action="@{/logout}" method="POST">
+	                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+	                <div th:replace="~{fragments/mainButton :: boton('Cerrar sesión', 'btn-primary', 'background-color: #EC407A;')}"></div>
+	            </form>
+	        </div>
+	
+	        <!-- Lista de eventos -->
+	        <div class="m-3">
+	            <p th:if="${#lists.isEmpty(eventList)}">No hay eventos disponibles actualmente.</p>
+	
+	            <div class="m-3">				
+	                <div class="row row-cols-1 row-cols-md-3 g-4">
+	                    <div th:each="event : ${eventList}">
+	                        <div class="card">
+	                            <img th:src="@{'/img/event/' + ${event.imagen}}" 
+	                                th:alt="${event.titulo}" 
+	                                class="card-img-top"
+	                                style="width: 100%; max-height: 200px; object-fit: contain;">
+	                            
+	                            <div class="card-body">
+	                                <h5 class="card-title" th:text="${event.titulo}">Event Title</h5>
+	                                <p class="card-text" th:text="${event.descripcion}">Event Description</p>
+	                                <p class="card-text">
+	                                    <small class="text-muted" th:text="${event.fechaInicio}">Date</small>
+	                                </p>
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </main>
 		
 		<!-- Footer -->
 	    <div th:replace="~{fragments/footer :: footer}"></div>
