Interacción con eventos
Los eventos pueden ser clicados para mostrar su información.

Los participantes pueden inscribirse a los eventos.

Los organizadores y participantes pueden ver sus eventos, los participantes verán los eventos a los que están inscritos, mientras que en esta ventana los organizadores verán los eventos que han creado.

Se comienza a preparar la edición de eventos.

--- a/src/main/resources/templates/createEvent.html
+++ b/src/main/resources/templates/createEvent.html
@@ -46,6 +46,10 @@
 			        <label for="endDate" class="form-label">Fecha de fin</label>
 			        <input type="date" class="form-control" id="endDate" name="endDate">
 			    </div>
+				<div class="mb-3">
+			        <label for="maxCapacity" class="form-label">Aforo máximo</label>
+			        <input type="number" class="form-control" id="maxCapacity" name="maxCapacity">
+			    </div>
 				
 				<!-- Selector multiple para las categorías -->
 				<div class="mb-3">
