--- a/src/main/resources/templates/eventList.html
+++ b/src/main/resources/templates/eventList.html
@@ -88,26 +88,29 @@
         <div class="m-3">
             <p th:if="${#lists.isEmpty(eventList)}">No hay eventos disponibles actualmente.</p>
 
-            <div class="m-3">				
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div th:each="event : ${eventList}">
-                        <div class="card">
-                            <img th:src="@{'/img/event/' + ${event.imagen}}" 
-                                th:alt="${event.title}" 
-                                class="card-img-top"
-                                style="width: 100%; max-height: 200px; object-fit: contain;">
-                            
-                            <div class="card-body">
-                                <h5 class="card-title" th:text="${event.title}">Event Title</h5>
-                                <p class="card-text" th:text="${event.description}">Event Description</p>
-                                <p class="card-text">
-                                    <small class="text-muted" th:text="${event.startDate}">Date</small>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+			<div class="m-3">				
+		        <div class="row row-cols-1 row-cols-md-3 g-4">
+		            <div th:each="event : ${eventList}" class="col">
+		                <!-- Enlace que envuelve la tarjeta -->
+		                <a th:href="@{'/event/info/' + ${event.id}}" style="text-decoration: none; color: inherit;">
+		                    <div class="card h-100 shadow-sm">
+		                        <img th:src="@{'/img/event/' + ${event.imagen}}" 
+		                             th:alt="${event.title}" 
+		                             class="card-img-top"
+		                             style="width: 100%; max-height: 200px; object-fit: cover;">
+		                        
+		                        <div class="card-body">
+		                            <h5 class="card-title" th:text="${event.title}">Event Title</h5>
+		                            <p class="card-text" th:text="${event.description}">Event Description</p>
+		                            <p class="card-text">
+		                                <small class="text-muted" th:text="${event.startDate}">Date</small>
+		                            </p>
+		                        </div>
+		                    </div>
+		                </a>
+		            </div>
+		        </div>
+		    </div>
         </div>
 		
 		<!-- Footer -->
