--- a/src/main/resources/templates/fragments/navMenu.html
+++ b/src/main/resources/templates/fragments/navMenu.html
@@ -17,7 +17,7 @@
                     <!-- Se muestran botones de "Mis eventos" distintos para participantes y para organizadores -->
                     <li class="nav-item" sec:authorize="hasRole('ORGANIZADOR') or hasRole('ADMIN')">
                         <a class="nav-link text-white border-end border-white py-3 px-4" 
-                           th:href="@{/event/manage-events}" 
+                           th:href="@{/event/my-events}" 
                            style="transition: background-color 0.3s ease;">Mis eventos</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('PARTICIPANTE') or hasRole('ADMIN')">
@@ -26,6 +26,13 @@
                            style="transition: background-color 0.3s ease;">Mis eventos</a>
                     </li>
 					
+					<!-- Para crear nuevos eventos, solo para organizadores -->
+					<li class="nav-item" sec:authorize="hasRole('ORGANIZADOR') or hasRole('ADMIN')">
+                       <a class="nav-link text-white border-end border-white py-3 px-4" 
+                          th:href="@{/event/create}" 
+                          style="transition: background-color 0.3s ease;">Nuevo evento</a>
+                   </li>
+									   
 					<!-- Estos van a la derecha (relacionados con la cuenta de usuario)-->
 					<div class="ms-auto d-flex">
 	                    <!-- Si el usuario está autenticado muestra el logout, sino el botón de login -->
