--- a/src/main/resources/templates/eventInfo.html
+++ b/src/main/resources/templates/eventInfo.html
@@ -3,10 +3,14 @@
 	<head>
 	    <title>Información del Evento</title>
 	    <meta charset="UTF-8">
+		<link rel="stylesheet" href="/css/styles.css">
 	    <!-- Bootstrap CDN -->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
+		<!-- Nav Menu -->
+        <div th:replace="~{fragments/navMenu :: navMenu}"></div>
+			
 		<div class="container mt-5">
 			<!-- Información general -->
 			<div style="display: flex; gap: 2rem; margin-bottom: 2rem;">
@@ -51,12 +55,14 @@
 		            </form>
 		        </div>
 		        <div th:if="${event.participants.contains(user)}">
-		            <p class="text-success fw-bold">Ya estás inscrito en este evento.</p>
+					<form th:action="@{/event/leave/{id}(id=${event.id})}" method="post">
+		                <button type="submit" class="btn btn-success">Desinscibirse</button>
+		            </form>
 		        </div>
 		    </div>
 		
 		    <!-- Para Organizadores -->
-		    <div sec:authorize="hasRole('ORGANIZADOR')">
+		    <div sec:authorize="hasRole('ORGANIZADOR')" th:if="${owner}">
 		
 		        <h3 class="mt-4">Gestión del Evento</h3>
 		
@@ -64,6 +70,7 @@
 		
 		        <h4>Participantes inscritos:</h4>
 		        <ul class="list-group mb-4">
+					<li class="list-group-item" th:if="${#lists.isEmpty(event.participants)}">No hay participantes actualmente</li>
 		            <li class="list-group-item" th:each="participant : ${event.participants}" th:text="${participant.username}">Usuario</li>
 		        </ul>
 		
