--- a/src/main/resources/templates/myEvents.html
+++ b/src/main/resources/templates/myEvents.html
@@ -3,11 +3,16 @@
 	<head>
 	    <title>Información del Evento</title>
 	    <meta charset="UTF-8">
+		<link rel="stylesheet" href="/css/styles.css">
 	    <!-- Bootstrap CDN -->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
-		<h2>Mis eventos</h2>
+		<h2 class="text-white text-center py-3 mb-0" style="background-color: var(--secondary-color)">Mis eventos</h2>
+		
+		<!-- Nav Menu -->
+        <div th:replace="~{fragments/navMenu :: navMenu}"></div>
+		
 		<!-- Lista de eventos -->
         <div class="m-3">
             <p th:if="${#lists.isEmpty(eventList)}">No hay eventos disponibles actualmente.</p>
