Se añade la creación y visualización de actividades
Se añade un listado de actividades de cada evento.

Se añade un formulario para crear nuevas actividades dentro de un evento.

--- a/src/main/resources/templates/eventInfo.html
+++ b/src/main/resources/templates/eventInfo.html
@@ -81,7 +81,7 @@
 		                <span th:text="${activity.description}">Descripción</span>
 		            </li>
 		        </ul>
-		        <a th:href="@{/event/{id}/activities/manage(id=${event.id})}" class="btn btn-secondary mt-3">Gestionar Actividades</a>
+		        <a th:href="@{/activity/manage/{id}(id=${event.id})}" class="btn btn-secondary mt-3">Gestionar Actividades</a>
 		    </div>
 		</div>
 	</body>
