--- a/src/main/resources/templates/createActivity.html
+++ b/src/main/resources/templates/createActivity.html
@@ -13,7 +13,7 @@
 		
 	    <div class="container mt-5">
 	        <h2 class="mb-4">Crear Actividad</h2>
-			<form action="/activity/new-activity" th:object="${activity}" method="post" enctype="multipart/form-data">
+			<form action="/activity/save-activity" th:object="${activity}" method="post" enctype="multipart/form-data">
 				<!-- Campo oculto con el ID del evento -->
 				<input type="hidden" name="eventId" th:value="${event.id}"/>
 				
@@ -26,11 +26,11 @@
 			        <input type="text" class="form-control" th:field="*{description}" id="description" name="description" placeholder="Descripción del evento">
 			    </div>
 			    <div class="mb-3">
-			        <label for="imagen" class="form-label">Hora de inicio de la actividad</label>
+			        <label for="startTime" class="form-label">Hora de inicio de la actividad</label>
 			        <input type="time" th:field="*{startTime}"  class="form-control">
 			    </div>
 			    <div class="mb-3">
-			        <label for="startDate" class="form-label">Hora de fin de la actividad</label>
+			        <label for="endTime" class="form-label">Hora de fin de la actividad</label>
 			        <input type="time" th:field="*{endTime}"  class="form-control">
 			    </div>
 			    
