--- a/src/main/resources/templates/updateEvent.html
+++ b/src/main/resources/templates/updateEvent.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 	    <meta charset="UTF-8">
-	    <title>Formulario de Evento</title>
+	    <title>Actualizar evento</title>
 		<link rel="stylesheet" href="/css/styles.css">
 	    <!-- Bootstrap CDN -->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         <div th:replace="~{fragments/navMenu :: navMenu}"></div>
 		
 	    <div class="container mt-5">
-	        <h2 class="mb-4">Crear Evento</h2>
+	        <h2 class="mb-4">Actualizar evento</h2>
 			<form th:action="@{'/update-event/' + ${id}}" th:object="${eventDTO}" method="post" enctype="multipart/form-data">
 			    <div class="mb-3">
 			        <label for="title" class="form-label">Título del evento</label>
