--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -20,8 +20,10 @@
 }
 
 html, body {
-  height: 100%;
-  margin: 0;
+	height: 100%;
+  	margin: 0;
+  	display: flex;
+  	flex-direction: column;
 }
 
 body {
