--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,6 +3,7 @@
 	<head>
 	    <title>User List</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="/css/styles.css">
 		<!-- Bootstrap CDN -->
 	  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
