--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,10 +5,17 @@
 	<head>
 	    <title>Página login</title>
 	    <meta charset="UTF-8">
+		<link rel="stylesheet" href="/css/styles.css">
 		<!-- Bootstrap CDN -->
 	  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
+		<h2 class="text-white text-center py-3 mb-0" style="background-color: var(--secondary-color)">Inicio de sesión</h2>
+		
+		<!-- Nav Menu -->
+        <div th:replace="~{fragments/navMenu :: navMenu}"></div>
+		
+		<main>
 		<div class="container-fluid mt-5 d-flex flex-column align-items-center">
 			<div class="col-md-3">
 			    <h1 class="text-center mb-3">Inicio de sesión</h1>
@@ -31,8 +38,11 @@
 			<div th:replace="~{fragments/linkButton :: boton('Crear usuario', '/register', '', 'background-color: #1E88E5;')}"></div>
 		</div>
 		
-		<div class="m-3" th:replace="~{fragments/backButton :: boton('/', '', 'background-color: #1E88E5;')}"></div>
-		
+		<div class="d-flex justify-content-center mt-4">
+            <div th:replace="~{fragments/backButton :: boton('/', '', 'background-color: #1E88E5;')}"></div>
+        </div>
+		</main>
+			
 		<!-- Footer -->
 	    <div th:replace="~{fragments/footer :: footer}"></div>
 	</body>
