--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,10 +3,15 @@
 <head>
     <title>Página de Registro</title>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href="/css/styles.css">
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+	<!-- Nav Menu -->
+    <div th:replace="~{fragments/navMenu :: navMenu}"></div>
+	
+	<main>
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -35,20 +40,21 @@
 
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-                    <div class="d-grid gap-2">
+                    <div class="d-grid gap-2 mt-3">
                         <div th:replace="~{fragments/mainButton :: boton('Crear usuario', 'btn-primary', '')}"></div>
                     </div>
 
                 </form>
 
-                <div class="d-grid gap-2 mt-3">
+                <div class="d-flex justify-content-center mt-4">
                     <div th:replace="~{fragments/backButton :: boton('/', '', 'background-color: #1E88E5;')}"></div>
                 </div>
 
             </div>
         </div>
     </div>
-
+	</main>
+	
     <!-- Footer -->
     <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
