--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 	<head>
-	    <title>User List</title>
+	    <title>Lista de usuarios</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="/css/styles.css">
 		<!-- Bootstrap CDN -->
 	  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
+		<h2 class="text-white text-center py-3 mb-0" style="background-color: var(--secondary-color)">Lista de usuarios</h2>
+		
+		<!-- Nav Menu -->
+        <div th:replace="~{fragments/navMenu :: navMenu}"></div>
+		
+		<main>
 	    <div>
 	        <h1 class="m-3">Lista de usuarios</h1>
 			<div class="m-3">
@@ -48,6 +54,7 @@
 		</div>
 		
 		<div class="m-3" th:replace="~{fragments/backButton :: boton('/', '', 'background-color: #1E88E5;')}"></div>
+		</main>
 		
 		<!-- Footer -->
 	    <div th:replace="~{fragments/footer :: footer}"></div>
