--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,6 +2,6 @@
 <footer th:fragment="footer" 
         class="bg-primary text-white text-center py-4"
         style="height: 80px;">
-  <p class="mb-0">Práctica 2 - Sistemas Distribuidos</p>
+  <p class="mb-0">Taller - Sistemas Distribuidos</p>
   <p class="mb-0"><b>Adrián Zamora Sánchez</b></p>
 </footer>
