--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	  lang="es">
 	<head>
-	    <title>Página login</title>
+	    <title>Inicio de sesión</title>
 	    <meta charset="UTF-8">
 		<link rel="stylesheet" href="/css/styles.css">
 		<!-- Bootstrap CDN -->
