--- a/src/main/resources/templates/createActivity.html
+++ b/src/main/resources/templates/createActivity.html
@@ -19,19 +19,19 @@
 				
 				<div class="mb-3">
 			        <label for="title" class="form-label">Título de la actividad</label>
-			        <input type="text" class="form-control" th:field="*{name}" id="name" name="name" placeholder="Título de la actividad">
+			        <input required type="text" class="form-control" th:field="*{name}" id="name" name="name" placeholder="Título de la actividad">
 			    </div>
 			    <div class="mb-3">
 			        <label for="description" class="form-label">Descripción de la actividad</label>
-			        <input type="text" class="form-control" th:field="*{description}" id="description" name="description" placeholder="Descripción del evento">
+			        <input required type="text" class="form-control" th:field="*{description}" id="description" name="description" placeholder="Descripción del evento">
 			    </div>
 			    <div class="mb-3">
 			        <label for="startTime" class="form-label">Hora de inicio de la actividad</label>
-			        <input type="time" th:field="*{startTime}"  class="form-control">
+			        <input required type="time" th:field="*{startTime}"  class="form-control">
 			    </div>
 			    <div class="mb-3">
 			        <label for="endTime" class="form-label">Hora de fin de la actividad</label>
-			        <input type="time" th:field="*{endTime}"  class="form-control">
+			        <input required type="time" th:field="*{endTime}"  class="form-control">
 			    </div>
 			    
 			    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
