--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,13 +30,10 @@
 					    <option th:each="role : ${rolList}"
 					            th:value="${role}"
 					            th:text="${role}"
-					            th:selected="${role.name() == user.rol}">
+					            th:selected="${role.name() == user.rol}"
+								required>
 					    </option>
 					</select>
-
-                    <!-- Rol USER por defecto para los no administradores -->
-                    <input sec:authorize="!hasRole('ADMIN')"
-                           type="hidden" th:field="*{rol}" value="USER"/>
 
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
