--- a/src/main/resources/templates/updateEvent.html
+++ b/src/main/resources/templates/updateEvent.html
@@ -28,11 +28,11 @@
 			<form th:action="@{'/update-event/' + ${id}}" th:object="${eventDTO}" method="post" enctype="multipart/form-data">
 			    <div class="mb-3">
 			        <label for="title" class="form-label">Título del evento</label>
-			        <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="Título del evento">
+			        <input required type="text" class="form-control" id="title" th:field="*{title}" placeholder="Título del evento">
 			    </div>
 			    <div class="mb-3">
 			        <label for="description" class="form-label">Descripción del evento</label>
-			        <input type="text" class="form-control" id="description" th:field="*{description}" placeholder="Descripción del evento">
+			        <input required type="text" class="form-control" id="description" th:field="*{description}" placeholder="Descripción del evento">
 			    </div>
 			    <div class="mb-3">
 					<div class="mb-3">
@@ -44,15 +44,15 @@
 			    </div>
 			    <div class="mb-3">
 			        <label for="startDate" class="form-label">Fecha de inicio</label>
-			        <input type="date" class="form-control" id="startDate" th:field="*{startDate}">
+			        <input required type="date" class="form-control" id="startDate" th:field="*{startDate}">
 			    </div>
 			    <div class="mb-3">
 			        <label for="endDate" class="form-label">Fecha de fin</label>
-			        <input type="date" class="form-control" id="endDate" th:field="*{endDate}">
+			        <input required type="date" class="form-control" id="endDate" th:field="*{endDate}">
 			    </div>
 				<div class="mb-3">
 			        <label for="maxCapacity" class="form-label">Aforo máximo</label>
-			        <input type="number" class="form-control" id="maxCapacity" th:field="*{maxCapacity}">
+			        <input required type="number" class="form-control" id="maxCapacity" th:field="*{maxCapacity}">
 			    </div>
 				
 				<!-- Selector multiple para las categorías -->
@@ -68,7 +68,7 @@
 				<!-- Buscador de ubicación -->
 			    <div class="mb-3">
 			        <label for="ubication" class="form-label">Lugar del evento</label>
-			        <input type="text" class="form-control mb-2" id="ubication" name="ubication" th:field="*{ubication}" readonly placeholder="Busca en el mapa el lugar">
+			        <input required type="text" class="form-control mb-2" id="ubication" name="ubication" th:field="*{ubication}" readonly placeholder="Busca en el mapa el lugar">
 			        <div id="map"></div>
 			    </div>
 			    
